--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -21,25 +21,16 @@
     </group>
 
     <item
-            android:id="@+id/menu_notebooks"
-            android:title="@string/nav_notebooks"
-            android:orderInCategory="1">
-        <menu>
-            <group
-                    android:id="@+id/section_notebooks"
-                    android:checkableBehavior="single">
-                <item
-                        android:id="@+id/fragment_manage_notebooks"
-                        android:icon="@drawable/ic_manage_notebooks"
-                        android:title="@string/nav_your_notebooks"/>
-                <item
-                        android:id="@+id/nav_default_notebook"
-                        android:icon="@drawable/ic_notebook"
-                        android:title="@string/default_notebook"
-                        android:visible="false"/>
-            </group>
-        </menu>
-    </item>
+            android:id="@+id/fragment_folder"
+            android:icon="@drawable/ic_notebook"
+            android:title="@string/nav_folders"
+            android:orderInCategory="1"/>
+
+    <item
+            android:id="@+id/fragment_calendar"
+            android:icon="@drawable/ic_archive"
+            android:title="Calendar"
+            android:orderInCategory="1"/>
 
     <group
             android:id="@+id/section_tags"
