--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:transitionGroup="true"
@@ -59,6 +60,15 @@
                     android:layout_height="wrap_content"
                     app:text="@string/preferences_color_scheme"
                     app:iconSrc="@drawable/ic_color"/>
+
+                <org.qosp.notes.ui.utils.views.PreferenceView
+                    android:id="@+id/setting_notes_root"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:text="Notes root directory"
+                    app:subText="Select where notes are saved"
+                    app:iconSrc="@drawable/ic_manage_notebooks"
+                    tools:ignore="HardcodedText" />
 
                 <View
                     android:layout_width="match_parent"
