--- a/app/src/main/res/layout/layout_note.xml
+++ b/app/src/main/res/layout/layout_note.xml
@@ -2,6 +2,7 @@
 <org.qosp.notes.ui.utils.views.NoteCardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
@@ -14,11 +15,23 @@
         app:cardCornerRadius="6dp">
 
     <LinearLayout
-            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+        <View
+                android:id="@+id/priority_border"
+                android:layout_width="4dp"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
+        <LinearLayout
+                android:id="@+id/linear_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="12dp"
+                android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_attachments"
@@ -32,6 +45,15 @@
                 android:layout_marginHorizontal="@dimen/card_note_padding"
                 android:layout_marginTop="@dimen/card_note_padding"
                 android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/priority_badge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="6dp"
+                    android:visibility="gone"
+                    android:textSize="14sp"
+                    tools:text="🔴" />
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/text_view_title"
@@ -136,6 +158,7 @@
                 app:chipSpacingHorizontal="4dp"
                 app:chipSpacingVertical="8dp"/>
 
+        </LinearLayout>
     </LinearLayout>
 
 </org.qosp.notes.ui.utils.views.NoteCardView>
